// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ogf residue should explain accepted residue and still succeed 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read ogf file <resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf",
    "Ogf file information",
    "Version: 4, model_type: 3, shader_id: 0, OgfBox { min: Vector3d { x: 0.0, y: 0.0, z: 0.0 }, max: Vector3d { x: 1.0, y: 1.0, z: 1.0 } } - OgfSphere { position: Vector3d { x: 0.0, y: 0.0, z: 0.0 }, radius: 1.0 }",
    "Boundaries box: OgfBox { min: Vector3d { x: 0.0, y: 0.0, z: 0.0 }, max: Vector3d { x: 1.0, y: 1.0, z: 1.0 } }",
    "Boundaries sphere: OgfSphere { position: Vector3d { x: 0.0, y: 0.0, z: 0.0 }, radius: 1.0 }",
    "Motion refs: ["actors\\\\stalker_animation", "actors\\\\stalker_scripts_animation", "actors\\\\zombied_animation", "actors\\\\stalker_smart_cover_animation", "omf\\\\wpn_mp5_hud_animation"]",
  ],
}
`;

exports[`ogf residue should identify the chunk residue rule in the verification report 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "gamedata",
    "verify",
  ],
  "duration": "<duration>",
  "error": "Check failed: 5 finding(s)",
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 3,
  "outcome": "checkFailed",
  "result": {
    "cache": {
      "bytes": 0,
      "entries": 0,
      "hits": 0,
      "misses": 2,
      "refused": 0,
    },
    "checks": [
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "Every declared source opened",
        "verificationType": "coverage",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "No unreachable files",
        "verificationType": "collisions",
      },
      {
        "duration": "<duration>",
        "findings": [
          {
            "assetPath": "meshes/ogf/residue_split_motion_ref.ogf",
            "message": "Mesh references missing motion 'actors\\stalker_animation'",
            "ruleId": "meshes.motion-validation",
          },
          {
            "assetPath": "meshes/ogf/residue_split_motion_ref.ogf",
            "message": "Mesh references missing motion 'actors\\stalker_scripts_animation'",
            "ruleId": "meshes.motion-validation",
          },
          {
            "assetPath": "meshes/ogf/residue_split_motion_ref.ogf",
            "message": "Mesh references missing motion 'actors\\stalker_smart_cover_animation'",
            "ruleId": "meshes.motion-validation",
          },
          {
            "assetPath": "meshes/ogf/residue_split_motion_ref.ogf",
            "message": "Mesh references missing motion 'actors\\zombied_animation'",
            "ruleId": "meshes.motion-validation",
          },
          {
            "assetPath": "meshes/ogf/residue_split_motion_ref.ogf",
            "message": "Mesh references missing motion 'omf\\wpn_mp5_hud_animation'",
            "ruleId": "meshes.motion-validation",
          },
        ],
        "status": "failed",
        "summary": "1/1 shader libraries valid, 205 blender definitions; 0/1 meshes valid",
        "verificationType": "meshes",
      },
    ],
    "duration": "<duration>",
    "skippedMounts": [],
    "status": "failed",
  },
}
`;

exports[`ogf residue should patch successfully after dropping the residue 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patch ogf motion refs <resources>/gamedata/meshes/ogf/residue_split_motion_ref.ogf, ["actors\\\\stalker_animation", "actors\\\\stalker_scripts_animation", "actors\\\\zombied_animation", "actors\\\\stalker_smart_cover_animation", "omf\\\\wpn_mp5_hud_animation"] -> ["actors\\\\replacement_animation"]",
    "Ogf motion refs written into <sandbox>/patched.ogf",
  ],
}
`;

exports[`ogf residue should report chunk residue as a verification finding 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Mesh motion refs not found by path: actors\\stalker_animation",
    "Mesh motion refs not found by path: actors\\stalker_scripts_animation",
    "Mesh motion refs not found by path: actors\\zombied_animation",
    "Mesh motion refs not found by path: actors\\stalker_smart_cover_animation",
    "Mesh motion refs not found by path: omf\\wpn_mp5_hud_animation",
    "Mesh is not valid: meshes\\ogf\\residue_split_motion_ref.ogf",
    "",
    "Project gamedata is invalid",
    "- 1/1 shader libraries valid, 205 blender definitions; 0/1 meshes valid",
    "  - [meshes] meshes/ogf/residue_split_motion_ref.ogf: Mesh references missing motion 'actors\\stalker_animation'",
    "  - [meshes] meshes/ogf/residue_split_motion_ref.ogf: Mesh references missing motion 'actors\\stalker_scripts_animation'",
    "  - [meshes] meshes/ogf/residue_split_motion_ref.ogf: Mesh references missing motion 'actors\\stalker_smart_cover_animation'",
    "  - [meshes] meshes/ogf/residue_split_motion_ref.ogf: Mesh references missing motion 'actors\\zombied_animation'",
    "  - [meshes] meshes/ogf/residue_split_motion_ref.ogf: Mesh references missing motion 'omf\\wpn_mp5_hud_animation'",
    "Gamedata project checked in <duration>",
    "Check failed: 5 finding(s)",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <sandbox>/gamedata, ignored: [.git, .idea, particles_unpacked, textures_unpacked, .gitignore, .gitattributes, README.md, LICENSE]",
    "Verifying gamedata project: <sandbox>/gamedata",
    "Verifying modules:",
    "  -meshes",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify meshes:",
    "Verified gamedata meshes in <duration>, 1/1 shader libraries valid, 205 blender definitions; 0/1 meshes valid",
  ],
}
`;

exports[`ogf residue should report how many bytes the patch dropped 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "ogf",
    "patch-motion-refs",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "discardedSize": 0,
    "isDryRun": false,
    "originalSize": 210,
    "patchedCount": 1,
    "patchedSize": 93,
  },
}
`;

exports[`ogf residue should report the residue cause and discarded reference 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "ogf",
    "info",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "bones": [],
    "bounds": {
      "maximum": [
        1,
        1,
        1,
      ],
      "minimum": [
        0,
        0,
        0,
      ],
      "radius": 1,
      "sphere": [
        0,
        0,
        0,
      ],
    },
    "children": [],
    "description": null,
    "material": null,
    "modelType": 3,
    "motionRefs": [
      "actors\\stalker_animation",
      "actors\\stalker_scripts_animation",
      "actors\\zombied_animation",
      "actors\\stalker_smart_cover_animation",
      "omf\\wpn_mp5_hud_animation",
    ],
    "progressiveLods": 0,
    "residue": null,
    "shaderId": 0,
    "unknownChunks": [],
    "version": 4,
  },
}
`;

exports[`ogf residue should write only the staged tree, reports and normalized visual 1`] = `
[
  {
    "path": "gamedata/configs/system.ltx",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "size": 0,
  },
  {
    "path": "gamedata/meshes/ogf/residue_split_motion_ref.ogf",
    "sha256": "433033159f338d374cd6f3db373f26327432ef6b4db8accac92fb6bbab0b5fb0",
    "size": 210,
  },
  {
    "path": "gamedata/shaders.xr",
    "sha256": "526e9363e42764c56a39bae72de854d89d65dfc1fe9aca0231e576456b8720c9",
    "size": 191315,
  },
  {
    "path": "info.json",
    "sha256": "60a13ba7820b87f57a47a5b541b327c17096bc9d074c56788d044d9e34c58e08",
    "size": 1195,
  },
  {
    "path": "patch.json",
    "sha256": "345ab1d4a80e5897a0715ffc70754f191e92d57e8be64f82f8303af6786fdfe0",
    "size": 651,
  },
  {
    "path": "patched.ogf",
    "sha256": "60a393455b068a558f74524a1d9bbc0e1c5bf6d7e1ee9f7d0218a26ce2f37fbe",
    "size": 93,
  },
  {
    "path": "verify.json",
    "sha256": "ed8c4760e23ceaa78cd103567439c1c0e3dedcd9e5ed5f16b832e5ecf2b0919a",
    "size": 2549,
  },
]
`;
